--- a/frontend/Coupon.html
+++ b/frontend/Coupon.html
@@ -76,14 +76,21 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </header>
+  
   <!-- ***** Header Area End ***** -->
   <div id="coupons" class="our-portfolio section">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
           <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
+            <center>
             <h6>Our coupons</h6>
             <h2>Discover Our Recent <em>Discounted</em> <span>coupons</span></h2>
+          <form name="f1">
+           <b>Enter Pincode</b><input type="textbox" name="t1" >
+          </form>
+        </center>
+
            
           </div>
         </div>
