--- a/frontend/JobsUser.html
+++ b/frontend/JobsUser.html
@@ -125,42 +125,39 @@ https://templatemo.com/tm-563-seo-dream
           <div class="container2">
             <div class="card mx-auto">
 
-                <div class="row">
+                <!-- <div class="row">
 
                     <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-                </div>
+                </div> -->
                 <div class="card-title">
-                    <p class="heading">Sample Job Title</p>&nbsp;<i class="far fa-compass"></i></p>
+                    <p class="heading"> Job Title</p>&nbsp;</p>
                 </div>
-                <p class="text-muted">You will be responsible for the visual design<br>for multi device.Understand basic design,<br>User journey, Ideation and Wireframing, etc...</p>
-
-                <div class="mutual"><i class="fas fa-users"></i>&nbsp;&nbsp;<span>5 Friends work here</span></div>
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
+                <p class="text-muted">description display</p>
+                <p>Duration: 6months</p>
+                <p>Payrange</p>
+                <p>Contact Details:<br></p>
+               
             </div>
         </div></div>
 
         <div class="col">
         <div class="container2">
             <div class="card mx-auto">
-                <div class="row">
+
+                <!-- <div class="row">
 
                     <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-                </div>
+                </div> -->
                 <div class="card-title">
-                    <p class="heading">Sample Job Title</p>&nbsp;<i class="far fa-compass"></i></p>
+                    <p class="heading"> Job Title</p>&nbsp;</p>
                 </div>
-                <p class="text-muted">You will be responsible for the visual design<br>for multi device.Understand basic design,<br>User journey, Ideation and Wireframing, etc...</p>
-
-                <div class="mutual"><i class="fas fa-users"></i>&nbsp;&nbsp;<span>5 Friends work here</span></div>
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
+                <p class="text-muted">description display</p>
+                <p>Duration: 6months</p>
+                <p>Payrange</p>
+                <p>Contact Details:<br></p>
+               
             </div>
-          </div>
+        </div></div>
         </div>
 
        </div>
