--- a/frontend/Job.HTML
+++ b/frontend/Job.HTML
@@ -97,12 +97,12 @@ https://templatemo.com/tm-563-seo-dream
                       <div class="col-lg-9 offset-lg-3">
                   <div class="col-lg-9">
                     <fieldset>
-                      <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email(For regular updates) " required="">
+                      <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email(For regular updates) " >
                     </fieldset>
                   </div>
                   <div class="col-lg-9">
                     <fieldset>
-                      <input type="pincode" name="number" id="pincode" placeholder="pincode" autocomplete="on">
+                      <input type="pincode" name="number" required="true" id="pincode" placeholder="pincode" autocomplete="on">
                     </fieldset>
                   </div>
                 
