--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,8 @@ https://templatemo.com/tm-563-seo-dream
 </head>
 
 <body>
-
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src='./assets/js/request.js'></script>
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
@@ -184,7 +185,7 @@ https://templatemo.com/tm-563-seo-dream
                 <div class="right-content">
                   <h4>Search a Job</h4>
                   <p>Tensed during COVID times , Looking for job best suited  for you</p>
-                  <a href="Job.HTML" class="btn btn-info" role="button">Find  here</a>
+                  <a href="Job.html" class="btn btn-info" role="button">Find  here</a>
                 </div>
               </div>
             </div>
