--- a/frontend/Hire.html
+++ b/frontend/Hire.html
@@ -1,28 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+    rel="stylesheet">
 
-    <title>CRUITIES</title>
+  <title>CRUITIES</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
-    <link rel="stylesheet" href="assets/css/animated.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-<!--
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
+  <link rel="stylesheet" href="assets/css/animated.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <!--
 
 TemplateMo 563 SEO Dream
 
@@ -32,7 +32,7 @@ https://templatemo.com/tm-563-seo-dream
 
 </head>
 
-<body>
+<body onload="getjobbusiness()">
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -45,7 +45,7 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </div>
   </div>
-  
+
   <!-- ***** Preloader End ***** -->
 
   <!-- ***** Header Area Start ***** -->
@@ -68,7 +68,7 @@ https://templatemo.com/tm-563-seo-dream
 
             </ul>
             <a class='menu-trigger'>
-                <span>Menu</span>
+              <span>Menu</span>
             </a>
             <!-- ***** Menu End ***** -->
           </nav>
@@ -77,109 +77,38 @@ https://templatemo.com/tm-563-seo-dream
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
-</div>
-</div>
-</div>
-</header>
-<br><br><br>
-<!-- <div class="container">
-<div class="row">
-<div class="col-lg-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.25s">
-  <form id="contact" action="" method="post">
-    <div class="row">
-      <div class="col-lg-6 offset-lg-3">
-        <div class="section-heading">
-          <h6>Your Details</h6>
-          <h2>Fill Out The Form Below To <span>Hire</span>Workforce</h2>
+  </div>
+  </div>
+  </div>
+  </header>
+  <br><br><br>
+  <div class="row">
+    <div class="col">
+      <div class="container2">
+        <div class="card mx-auto">
+          <div class="row">
+            <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
+          </div>
+          <br><br><br>
+          <a href="jobsForm.html">
+            <h1 style="font-size: 80px">
+              <center>+</center>
+            </h1>
+          </a>
+          <br><br><br>
+
         </div>
       </div>
-      <div class="col-lg-9 offset-lg-2">
-        <div class="row">
-            <div class="col-lg-12">
-                <fieldset>
-                  <input type="Title" name="Title" id="text" placeholder="Title" autocomplete="on" required>
-                </fieldset>
-              </div>
-            <div class="col-lg-12">
-                <fieldset>
-                  <textarea name=" description" type="subject" class="form-control" id="description" placeholder="description" required=""></textarea>
-                </fieldset>
-              </div>
-
-          <div class="col-lg-6">
-            <fieldset>
-              <input type="Subject" name="Duration" id="Duration" placeholder="Duration" autocomplete="on" required>
-            </fieldset>
-          </div>
-          <div class="col-lg-6">
-            <fieldset>
-              <input type="number" name="Pay Range" id="number"  placeholder="Pay Range" required="">
-            </fieldset>
-            </div>
-            <div class="col-lg-6 col offset-lg-3">
-                <input class="btn btn-primary" type="submit" value="Submit">
-            </div>
-          </div> -->
-      <div class="row">
-                <div class="col">
-
-          <div class="container2">
-            <div class="card mx-auto">
-
-                <div class="row">
-
-                    <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-                </div>
-                <div class="card-title">
-                    <p class="heading">Sample Job Title</p>&nbsp;<i class="far fa-compass"></i></p>
-                </div>
-                <p class="text-muted">You will be responsible for the visual design<br>for multi device.Understand basic design,<br>User journey, Ideation and Wireframing, etc...</p>
-
-                <div class="mutual"><i class="fas fa-users"></i>&nbsp;&nbsp;<span>5 Friends work here</span></div>
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
-            </div>
-        </div></div>
-
-        <div class="col">
-        <div class="container2">
-            <div class="card mx-auto">
-                <div class="row">
-
-                    <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-                </div>
-                <div class="card-title">
-                    <p class="heading">Sample Job Title</p>&nbsp;<i class="far fa-compass"></i></p>
-                </div>
-                <p class="text-muted">You will be responsible for the visual design<br>for multi device.Understand basic design,<br>User journey, Ideation and Wireframing, etc...</p>
-
-                <div class="mutual"><i class="fas fa-users"></i>&nbsp;&nbsp;<span>5 Friends work here</span></div>
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
-            </div>
-          </div>
-        </div>
-
-       <div class="col">
-        <div class="container2">
-            <div class="card mx-auto">
-                <div class="row">
-
-                    <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-                </div>
-                <br><br><br>
+    </div>
+    <div class="col">
+      <div id="jobscontainer">
+       
+      </div>
+    </div>
 
 
-                <a href ="jobsForm.html"><h1 style="font-size: 80px"><center>+</center></h1></a>
-                  <br><br><br>
-
-            </div>
-          </div>
-        </div></div></div>
+  </div>
+  </div>
 
 
 
@@ -189,7 +118,9 @@ https://templatemo.com/tm-563-seo-dream
         <div class="col-lg-12">
           <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved.
 
-          <br>Web Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">TemplateMo</a></p>
+            <br>Web Designed by <a rel="nofollow" href="https://templatemo.com"
+              title="free CSS templates">TemplateMo</a>
+          </p>
         </div>
       </div>
     </div>
@@ -202,6 +133,9 @@ https://templatemo.com/tm-563-seo-dream
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+   <script src="assets/js/request.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </body>
+
 </html>
