--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-563-seo-dream
                 </div>
                 <div class="col-lg-12">
                     <fieldset>
-                      <input type="number" name="contact" id="contact" placeholder="contact" autocomplete="on">
+                      <input  type="number" name="contact" id="phonenumber" placeholder="contact" >
                     </fieldset>
                   </div>
                 <div class="col-lg-12">
@@ -121,7 +121,7 @@ https://templatemo.com/tm-563-seo-dream
                 </div>
                 <div class="col-lg-12">
                   <fieldset>
-                    <a class="btn btn-primary" href="index.html" role="button">Proceed</a>
+                    <a onclick="registerowner()" class="btn btn-primary" role="button">Proceed</a>
                   </fieldset>
                 </div>
               </div>
@@ -145,6 +145,8 @@ https://templatemo.com/tm-563-seo-dream
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/request.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </body>
 </html>
