--- a/frontend/Sell.html
+++ b/frontend/Sell.html
@@ -1,28 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+    rel="stylesheet">
 
-    <title>CRUITIES</title>
+  <title>CRUITIES</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
-    <link rel="stylesheet" href="assets/css/animated.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-<!--
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
+  <link rel="stylesheet" href="assets/css/animated.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <!--
 
 TemplateMo 563 SEO Dream
 
@@ -32,7 +32,7 @@ https://templatemo.com/tm-563-seo-dream
 
 </head>
 
-<body>
+<body onload="getcouponbusiness()">
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -63,11 +63,9 @@ https://templatemo.com/tm-563-seo-dream
               <li class="scroll-to-section"><a href="Business.html">Business PORTAL</a></li>
 
 
-
-
             </ul>
             <a class='menu-trigger'>
-                <span>Menu</span>
+              <span>Menu</span>
             </a>
             <!-- ***** Menu End ***** -->
           </nav>
@@ -76,63 +74,37 @@ https://templatemo.com/tm-563-seo-dream
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
-</div>
-</div>
-</div>
-</header>
-<br><br><br><br>
+  </div>
+  </div>
+  </div>
+  </header>
+  <br><br><br><br>
 
-            <center><h2>Coupons You Added</h2></center>
-          </div>
-        </div>
-<br><br>
-     <div class="row">
-        <div class="col">
-        <div class="coupon">
+  <center>
+    <h2>Coupons You Added</h2>
+  </center>
+  </div>
+  </div>
+  <br><br>
+  <!-- ......................couponscontainer .......................................-->
 
-              <h3>Company Name</h3>
-
-            <div class="container1" style="background-color:white">
-              <h2><b>20% OFF YOUR PURCHASE</b></h2>
-              <p>Lorem ipsum dolor sit amet, et nam pertinax gloriatur. Sea te minim soleat senserit, ex quo luptatum tacimates voluptatum, salutandi delicatissimi eam ea. In sed nullam laboramus appellantur, mei ei omnis dolorem mnesarchum.</p>
-            </div>
-            <div class="container1">
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
-              <p class="expire">Expires: Jan 03, 2021</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="coupon">
-
-              <h3>Company Name</h3>
-
-            <div class="container1" style="background-color:white">
-              <h2><b>20% OFF YOUR PURCHASE</b></h2>
-              <p>Lorem ipsum dolor sit amet, et nam pertinax gloriatur. Sea te minim soleat senserit, ex quo luptatum tacimates voluptatum, salutandi delicatissimi eam ea. In sed nullam laboramus appellantur, mei ei omnis dolorem mnesarchum.</p>
-            </div>
-            <div class="container1">
-                <div class="row btnsubmit mt-4">
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Edit</span></button> </div>
-                    <div class="col-md-6 "> <button type="button" class="btn btn-primary btn-lg"><span>Disable</span></button> </div>
-                </div>
-              <p class="expire">Expires: Jan 03, 2021</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="coupon">
-            <br><br><br><br><br><br>
-            <a href="couponsForm.html"><h1 style="font-size: 80px"><center>+</center></h1></a>
-              <br><br><br><br><br>
-
-        </div>
-        </div>
+  <div class="row">
+    <div class="col">
+      <div class="coupon">
+        <a href="couponsForm.html">
+          <h1 style="font-size: 80px">
+            <center>+</center>
+          </h1>
+        </a>
       </div>
+    </div>
+
+  
+
+    <div id="couponscontainer">
+      
+    </div>
+  </div>
 
 
   <footer>
@@ -141,19 +113,25 @@ https://templatemo.com/tm-563-seo-dream
         <div class="col-lg-12">
           <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved.
 
-          <br>Web Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">TemplateMo</a></p>
+            <br>Web Designed by <a rel="nofollow" href="https://templatemo.com"
+              title="free CSS templates">TemplateMo</a>
+          </p>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- Scripts -->
+  <!-- <script>window.onloaded = getcouponbusiness() </script> -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/request.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </body>
+
 </html>
