--- a/frontend/couponsForm.html
+++ b/frontend/couponsForm.html
@@ -105,23 +105,23 @@ https://templatemo.com/tm-563-seo-dream
           </div>
           <div class="col-lg-6">
             <fieldset>
-              <input type="number" name="offering price" id="password" placeholder="offering price" autocomplete="on" required>
+              <input type="number" name="offering price" id="op" placeholder="offering price" autocomplete="on" required>
             </fieldset>
           </div>
           <div class="col-lg-6">
             <fieldset>
-              <input type="number" name="Discount rate" id="Discount rate"  placeholder="Discount" required="">
+              <input type="number" name="Discount rate" id="discount"  placeholder="Discount" required="">
             </fieldset>
           </div>
           <div class="col-lg-6">
             <fieldset>
-              <input type="date" name="Valid Till" id="Valid till" placeholder="Valid till" autocomplete="on">
+              <input type="date" name="Valid" id="valid" placeholder="Valid till" autocomplete="on">
             </fieldset>
           </div>
          
           <div class="col-lg-12">
             <fieldset>
-              <a class="btn btn-primary" href="#" role="button">Add</a>
+              <a class="btn btn-primary" onclick="addcoupon()" role="button">Add</a>
             </fieldset>
           </div>
         </div>
@@ -152,6 +152,8 @@ https://templatemo.com/tm-563-seo-dream
   <script src="assets/js/animation.js"></script>
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="assets/js/request.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </body>
 </html>
