email function added, frotend and game altered

--- a/frontend/AllGames.html
+++ b/frontend/AllGames.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-563-seo-dream
 -->
   </head>
 
-  <body onload="getcouponbusiness()">
+  <body>
     <!-- ***** Preloader Start ***** -->
     <div id="js-preloader" class="js-preloader">
       <div class="preloader-inner">
@@ -74,9 +74,7 @@ https://templatemo.com/tm-563-seo-dream
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li class="scroll-to-section">
-                  <a href="Business.html">Business PORTAL</a>
-                </li>
+                <li class="scroll-to-section"><a href="index.html">HOME</a></li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -88,47 +86,45 @@ https://templatemo.com/tm-563-seo-dream
       </div>
     </header>
     <br /><br /><br /><br /><br />
-
     <center>
-      <h2>Coupons You Added</h2>
+      <h2><b>Get ready to win exciting offers soon</b></h2>
     </center>
-
-    <br /><br />
-    <!-- ......................couponscontainer .......................................-->
-
-    <div class="row">
-      <div class="col">
-        <div class="coupon">
-          <a href="couponsForm.html">
-            <h1 style="font-size: 80px">
-              <center>+</center>
-            </h1>
-          </a>
+    <center>
+      <div class="container">
+        <div class="card" style="width: 24rem">
+          <img
+            class="card-img-top"
+            src="assets/images/brick.png"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h4 class="card-title">Brick Breaker</h4>
+            <p>Break all bricks to win</p>
+            <br />
+            <a href="Game.html" class="btn btn-primary">Play Game</a>
+          </div>
         </div>
       </div>
+    </center>
 
-      <div id="couponscontainer"></div>
-    </div>
-
-    <br /><br /><br />
-    <div class="footer-clean" style="width: 100%" id="Contact">
+    <div class="footer-clean" style="width: 100%">
       <footer>
         <div style="padding-left: 50px; padding-right: 50px">
           <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 item">
               <h3>Services</h3>
               <ul>
-                <li><a href="#">Coupons</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Games</a></li>
+                <li><a href="#">Web design</a></li>
+                <li><a href="#">Development</a></li>
+                <li><a href="#">Hosting</a></li>
               </ul>
             </div>
             <div class="col-sm-4 col-md-3 item">
               <h3>About</h3>
               <ul>
-                <li><a href="#">Cruities</a></li>
-                <li><a href="#">Backholders</a></li>
-                <li><a href="#">Covid-Solutions</a></li>
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Legacy</a></li>
               </ul>
             </div>
             <div class="col-sm-4 col-md-3 item">
@@ -144,13 +140,12 @@ https://templatemo.com/tm-563-seo-dream
               ><a href="#"><i class="icon ion-social-twitter"></i></a
               ><a href="#"><i class="icon ion-social-snapchat"></i></a
               ><a href="#"><i class="icon ion-social-instagram"></i></a>
-              <p class="copyright">Cruiters © 2021</p>
+              <p class="copyright">Company Name © 2018</p>
             </div>
           </div>
         </div>
       </footer>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
@@ -161,7 +156,5 @@ https://templatemo.com/tm-563-seo-dream
     <script src="assets/js/animation.js"></script>
     <script src="assets/js/imagesloaded.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/request.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
