--- a/frontend/Coupon.html
+++ b/frontend/Coupon.html
@@ -1,129 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
 
-<head>
+    <title>CRUITIES</title>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-    rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <title>CRUITIES</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-  <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
-  <link rel="stylesheet" href="assets/css/animated.css">
-  <link rel="stylesheet" href="assets/css/owl.css">
-  <!--
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css" />
+    <link rel="stylesheet" href="assets/css/animated.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <!--
 
 TemplateMo 563 SEO Dream
 
 https://templatemo.com/tm-563-seo-dream
 
 -->
+  </head>
 
-</head>
-
-<body >
-
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Preloader End ***** -->
-
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <nav class="main-nav">
-            <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <h4>CRUITIES <img src="assets/images/logo-icon.png" alt=""></h4>
-            </a>
-            <!-- ***** Logo End ***** -->
-            <!-- ***** Menu Start ***** -->
-            <ul class="nav">
-              <li class="scroll-to-section"><a href="index.html">Home</a></li>
-
-              <li class="scroll-to-section"><a href="Coupon.html">Coupons</a></li>
-              <li class="scroll-to-section"><a href="Game.html">Game</a></li>
-              <li class="scroll-to-section"><a href="Job.html">Jobs</a></li>
-              <li class="scroll-to-section"><a href="ContactUs.html">Contact Us</a></li>
-
-            </ul>
-            <a class='menu-trigger'>
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
-          </nav>
+  <body>
+    <!-- ***** Preloader Start ***** -->
+    <div id="js-preloader" class="js-preloader">
+      <div class="preloader-inner">
+        <span class="dot"></span>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
     </div>
-  </header>
+    <!-- ***** Preloader End ***** -->
 
-  <!-- ***** Header Area End ***** -->
-  <div id="coupons" class="our-portfolio section">
-    <div class="container">
-      <div class="row">
-
-        <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-          <center>
-            <h6>Our coupons</h6>
-            <h2>Discover Our Recent <em>Discounted</em> <span>coupons</span></h2>
-            <form name="f1">
-              <b>Enter Pincode</b><input type="textbox" id="userpin" name="t1">
-              <a type="button"onclick="getcouponuser()">Submit</a>
-            </form>
-          </center>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-    <div id="couponscontainer">
-   
-    </div>
-    </div>
-    <footer>
+    <!-- ***** Header Area Start ***** -->
+    <header
+      class="header-area header-sticky wow slideInDown"
+      data-wow-duration="0.75s"
+      data-wow-delay="0s"
+    >
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved.
-
-              <br>Web Designed by <a rel="nofollow" href="https://templatemo.com"
-                title="free CSS templates">TemplateMo</a>
-            </p>
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="index.html" class="logo">
+                <h4>
+                  CRUITIES <img src="assets/images/logo-icon.png" alt="" />
+                </h4>
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li class="scroll-to-section"><a href="index.html">Home</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
           </div>
         </div>
       </div>
-    </footer>
+    </header>
 
-    <!-- Scripts -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/animation.js"></script>
-    <script src="assets/js/imagesloaded.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/request.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- ***** Header Area End ***** -->
+    <div id="coupons" class="our-portfolio section">
+      <div class="container">
+        <div class="row">
+          <div
+            class="section-heading wow fadeInLeft"
+            data-wow-duration="1s"
+            data-wow-delay="0.3s"
+          >
+            <center>
+              <h2>
+                Discover Recent <em>Discounted</em>
+                <span>coupons nearby you</span>
+              </h2>
+              <br />
+              <form name="f1">
+                <b>Enter Pincode</b
+                ><input type="textbox" id="userpin" name="t1" />
+                <a type="button" onclick="getcouponuser()">Submit</a>
+              </form>
+            </center>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div id="couponscontainer"></div>
+      </div>
+      <div
+        class="footer-clean"
+        style="width: 100%; margin-top: 300px"
+        id="Contact"
+      >
+        <footer>
+          <div style="padding-left: 50px; padding-right: 50px">
+            <div class="row justify-content-center">
+              <div class="col-sm-4 col-md-3 item">
+                <h3>Services</h3>
+                <ul>
+                  <li><a href="#">Coupons</a></li>
+                  <li><a href="#">Jobs</a></li>
+                  <li><a href="#">Games</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                <h3>About</h3>
+                <ul>
+                  <li><a href="#">Cruities</a></li>
+                  <li><a href="#">Backholders</a></li>
+                  <li><a href="#">Covid-Solutions</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                <h3>Careers</h3>
+                <ul>
+                  <li><a href="#">Job openings</a></li>
+                  <li><a href="#">Employee success</a></li>
+                  <li><a href="#">Benefits</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3 item social">
+                <a href="#"><i class="icon ion-social-facebook"></i></a
+                ><a href="#"><i class="icon ion-social-twitter"></i></a
+                ><a href="#"><i class="icon ion-social-snapchat"></i></a
+                ><a href="#"><i class="icon ion-social-instagram"></i></a>
+                <p class="copyright">Cruiters © 2021</p>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
 
-</body>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
+      <!-- Scripts -->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="assets/js/owl-carousel.js"></script>
+      <script src="assets/js/animation.js"></script>
+      <script src="assets/js/imagesloaded.js"></script>
+      <script src="assets/js/custom.js"></script>
+      <script src="assets/js/request.js"></script>
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </div>
+  </body>
 </html>
