--- a/frontend/JobsUser.html
+++ b/frontend/JobsUser.html
@@ -1,124 +1,171 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
 
-<head>
+    <title>CRUITIES</title>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-    rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <title>CRUITIES</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-  <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
-  <link rel="stylesheet" href="assets/css/animated.css">
-  <link rel="stylesheet" href="assets/css/owl.css">
-  <!--
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css" />
+    <link rel="stylesheet" href="assets/css/animated.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <!--
 
 TemplateMo 563 SEO Dream
 
 https://templatemo.com/tm-563-seo-dream
 
 -->
+  </head>
 
-</head>
-
-<body>
-
-  <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-
-  <!-- ***** Preloader End ***** -->
-
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <nav class="main-nav">
-            <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
-              <h4>CRUITIES <img src="assets/images/logo-icon.png" alt=""></h4>
-            </a>
-            <!-- ***** Logo End ***** -->
-            <!-- ***** Menu Start ***** -->
-            <ul class="nav">
-              <li class="scroll-to-section"><a href="Business.html">User PORTAL</a></li>
-
-            </ul>
-            <a class='menu-trigger'>
-              <span>Menu</span>
-            </a>
-            <!-- ***** Menu End ***** -->
-          </nav>
+  <body>
+    <!-- ***** Preloader Start ***** -->
+    <div id="js-preloader" class="js-preloader">
+      <div class="preloader-inner">
+        <span class="dot"></span>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
     </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
-  </div>
-  </div>
-  </div>
-  </header>
-  <br><br><br><br><br>
-  <center>
-    <form name="f1">
-      <b>Enter Pincode</b><input type="textbox" id="userpincode" name="t"  >
-      <a type="button" onclick="getjobuser()">Submit</a>
-    </form>
-  </center>
-  <div class="row">
-    <div class="col">
 
-      <div id="jobsusercontainer">
-        
-      </div>
-    </div>
+    <!-- ***** Preloader End ***** -->
 
-  </div>
-  </div>
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved.
-
-            <br>Web Designed by <a rel="nofollow" href="https://templatemo.com"
-              title="free CSS templates">TemplateMo</a>
-          </p>
+    <!-- ***** Header Area Start ***** -->
+    <header
+      class="header-area header-sticky wow slideInDown"
+      data-wow-duration="0.75s"
+      data-wow-delay="0s"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <!-- ***** Logo Start ***** -->
+              <a href="index.html" class="logo">
+                <h4>
+                  CRUITIES <img src="assets/images/logo-icon.png" alt="" />
+                </h4>
+              </a>
+              <!-- ***** Logo End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li class="scroll-to-section"><a href="index.html">HOME</a></li>
+              </ul>
+              <a class="menu-trigger">
+                <span>Menu</span>
+              </a>
+              <!-- ***** Menu End ***** -->
+            </nav>
+          </div>
         </div>
       </div>
+    </header>
+    <!-- ***** Header Area End ***** -->
+
+    <br /><br /><br /><br /><br />
+    <center>
+      <h5>
+        <b>
+          FILTER JOBS ACCORDING TO
+          <span style="color: #33ccc5">YOUR LOCATION</span>
+        </b>
+      </h5>
+      <form name="f1">
+        <br />
+        <b>Enter Pincode</b><input type="textbox" id="userpincode" name="t" />
+        <a type="button" onclick="getjobuser()">Submit</a>
+      </form>
+    </center>
+    <div class="row">
+      <div class="col">
+        <div id="jobsusercontainer"></div>
+      </div>
     </div>
-  </footer>
 
-  <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
-  <script src="assets/js/custom.js"></script>
-  <script src="assets/js/request.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <br /><br /><br />
+    <footer>
+      <div
+        class="footer-clean"
+        style="width: 100%; margin-top: 310px"
+        id="Contact"
+      >
+        <footer>
+          <div style="padding-left: 50px; padding-right: 50px">
+            <div class="row justify-content-center">
+              <div class="col-sm-4 col-md-3 item">
+                <h3>Services</h3>
+                <ul>
+                  <li><a href="#">Coupons</a></li>
+                  <li><a href="#">Jobs</a></li>
+                  <li><a href="#">Games</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                <h3>About</h3>
+                <ul>
+                  <li><a href="#">Cruities</a></li>
+                  <li><a href="#">Backholders</a></li>
+                  <li><a href="#">Covid-Solutions</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                <h3>Careers</h3>
+                <ul>
+                  <li><a href="#">Job openings</a></li>
+                  <li><a href="#">Employee success</a></li>
+                  <li><a href="#">Benefits</a></li>
+                </ul>
+              </div>
+              <div class="col-lg-3 item social">
+                <a href="#"><i class="icon ion-social-facebook"></i></a
+                ><a href="#"><i class="icon ion-social-twitter"></i></a
+                ><a href="#"><i class="icon ion-social-snapchat"></i></a
+                ><a href="#"><i class="icon ion-social-instagram"></i></a>
+                <p class="copyright">Cruiters © 2021</p>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </footer>
 
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Scripts -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/animation.js"></script>
+    <script src="assets/js/imagesloaded.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/request.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </body>
 </html>
