--- a/frontend/Hire.html
+++ b/frontend/Hire.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 
   <title>CRUITIES</title>
 
@@ -56,7 +58,7 @@ https://templatemo.com/tm-563-seo-dream
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>CRUITIES <img src="assets/images/logo-icon.png" alt=""></h4>
+              <h4>CRUITIES</h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -75,67 +77,77 @@ https://templatemo.com/tm-563-seo-dream
         </div>
       </div>
     </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
-  </div>
-  </div>
-  </div>
-  </header>
-  <br><br><br>
-  <div class="row">
-    <div class="col">
+
+    <br>
+    <div class="row">
+
       <div class="container2">
         <div class="card mx-auto">
-          <div class="row">
-            <div class="header right"><i class="fas fa-ellipsis-h"></i></div>
-          </div>
-          <br><br><br>
           <a href="jobsForm.html">
             <h1 style="font-size: 80px">
               <center>+</center>
             </h1>
           </a>
-          <br><br><br>
-
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="row">
       <div id="jobscontainer">
-       
       </div>
     </div>
-
-
-  </div>
-  </div>
-
-
-
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved.
-
-            <br>Web Designed by <a rel="nofollow" href="https://templatemo.com"
-              title="free CSS templates">TemplateMo</a>
-          </p>
+    <div class="footer-clean" style="width:100%;" id="Contact">
+      <footer>
+        <div style="padding-left:50px; padding-right:50px;">
+          <div class="row justify-content-center">
+            <div class="col-sm-4 col-md-3 item">
+              <h3>Services</h3>
+              <ul>
+                <li><a href="#">Coupons</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Games</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-4 col-md-3 item">
+              <h3>About</h3>
+              <ul>
+                <li><a href="#">Cruities</a></li>
+                <li><a href="#">Backholders</a></li>
+                <li><a href="#">Covid-Solutions</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-4 col-md-3 item">
+              <h3>Careers</h3>
+              <ul>
+                <li><a href="#">Job openings</a></li>
+                <li><a href="#">Employee success</a></li>
+                <li><a href="#">Benefits</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
+                  class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+                href="#"><i class="icon ion-social-instagram"></i></a>
+              <p class="copyright">Cruiters © 2021</p>
+            </div>
+          </div>
         </div>
-      </div>
+      </footer>
     </div>
-  </footer>
 
-  <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
-  <script src="assets/js/custom.js"></script>
-   <script src="assets/js/request.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Scripts -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/animation.js"></script>
+    <script src="assets/js/imagesloaded.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/request.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </div>
+    </div>
+    </div>
 </body>
 
 </html>
