--- a/frontend/jobsForm.html
+++ b/frontend/jobsForm.html
@@ -9,6 +9,11 @@
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+	  
+	  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 
     <title>CRUITIES</title>
 
@@ -114,16 +119,16 @@ https://templatemo.com/tm-563-seo-dream
             </fieldset>
             </div>
             <div class="col-lg-6 col offset-lg-3">
-                <a class="btn btn-primary" onclick="addjob()" >Submit</a>
+                <a class="btn btn-primary" onclick="addjob(); sendmail()" >Submit</a>
             </div>
           </div>
           <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2021 SEO Dream Co., Ltd. All Rights Reserved. 
+          <p>Copyright © 2021 Cruities All Rights Reserved. 
           
-          <br>Web Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">TemplateMo</a></p>
+          <br>Web Designed by <a >The Backholders</a></p>
         </div>
       </div>
     </div>
