final changes made and env added

--- a/frontend/Coupon.html
+++ b/frontend/Coupon.html
@@ -104,7 +104,20 @@ https://templatemo.com/tm-563-seo-dream
               <form name="f1">
                 <b>Enter Pincode</b
                 ><input type="textbox" id="userpin" name="t1" />
-                <a type="button" onclick="getcouponuser()">Submit</a>
+                <a
+                  type="button"
+                  style="
+                    border: 1px solid;
+                    color: white;
+                    background-color: #33ccc5;
+                    padding: 8px;
+                    padding-right: 20px;
+                    padding-left: 20px;
+                    border-radius: 2px;
+                  "
+                  onclick="getcouponuser()"
+                  >Submit</a
+                >
               </form>
             </center>
           </div>
