--- a/frontend/JobsUser.html
+++ b/frontend/JobsUser.html
@@ -99,7 +99,20 @@ https://templatemo.com/tm-563-seo-dream
       <form name="f1">
         <br />
         <b>Enter Pincode</b><input type="textbox" id="userpincode" name="t" />
-        <a type="button" onclick="getjobuser()">Submit</a>
+        <a
+          type="button"
+          style="
+            border: 1px solid;
+            color: white;
+            background-color: #33ccc5;
+            padding: 8px;
+            padding-right: 20px;
+            padding-left: 20px;
+            border-radius: 2px;
+          "
+          onclick="getjobuser()"
+          >Submit</a
+        >
       </form>
     </center>
     <div class="row">
