--- a/frontend/Sell.html
+++ b/frontend/Sell.html
@@ -90,13 +90,13 @@ https://templatemo.com/tm-563-seo-dream
     <br /><br /><br /><br /><br />
 
     <center>
-      <h2>Coupons You Added</h2>
+      <h4><b>Your Coupons</b></h4>
     </center>
 
     <br /><br />
     <!-- ......................couponscontainer .......................................-->
 
-    <div class="row">
+    <div>
       <div class="col">
         <div class="coupon">
           <a href="couponsForm.html">
@@ -106,12 +106,16 @@ https://templatemo.com/tm-563-seo-dream
           </a>
         </div>
       </div>
-
+      <br />
       <div id="couponscontainer"></div>
     </div>
 
     <br /><br /><br />
-    <div class="footer-clean" style="width: 100%" id="Contact">
+    <div
+      class="footer-clean"
+      style="width: 100%; margin-top: 150px"
+      id="Contact "
+    >
       <footer>
         <div style="padding-left: 50px; padding-right: 50px">
           <div class="row justify-content-center">
