--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ https://templatemo.com/tm-563-seo-dream
                       you
                     </p>
                     <br />
-                    <a href="Job.html" class="btn btn-info" role="button"
+                    <a href="Job.HTML" class="btn btn-info" role="button"
                       >Search here</a
                     >
                   </div>
