--- a/Game.html
+++ b/Game.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-563-seo-dream
   <!-- ***** Header Area End ***** -->
 	
   <div>
-  <canvas id="myCanvas" width="500" height="500"></canvas>
+  <canvas id="myCanvas" style="background-color:brown" width="500" height="500"></canvas>
 </div>
 
 <footer>
